<resources>
    <string name="app_name">Projeto Clean World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Clean world</string>
    <string name="nav_header_subtitle">clean.world@cw.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sair">Sair</string>

    <string name="menu_home">Home</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_usuario">Usuário</string>
    <string name="menu_share">Compartilhe</string>
    <string name="menu_send">Sobre Nós</string>
    <string name="title_activity_maps_activity">Map</string>
    <string name="register">Registrar</string>
    <string name="tag">Ajude nos a saber um pouco \nmais sobre você</string>
    <string name="your_name">Nome completo</string>
    <string name="cpf">Informe seu CPF</string>
    <string name="dt_nascimento">Informe sua data de nascimento</string>
<<<<<<< HEAD
    <string name="frase">Cadastre suas informações</string>
    <string name="email">Insira seu e-mail</string>
    <string name="senha">Insira sua senha</string>
    <string name="login">Efetue o Login</string>
    <string name="entrar">Entrar</string>
=======
    <string name="email">Informe seu email</string>
>>>>>>> 697f8f7d38f72bd03621572fcc3d8d1c2ab80772
</resources>
