<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_eventos"
        android:name="com.example.myapplication.ui.eventos.EventosFragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="com.example.myapplication.ui.ranking.RankingFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_usuario"
        android:name="com.example.myapplication.ui.usuario.UsuarioFragment"
        android:label="@string/menu_usuario"
        tools:layout="@layout/fragment_usuario" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>