<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/map_verde"
            android:title="@string/menu_home"

            />

        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ranking_icone"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/usuario_icone_verde2"
            android:title="@string/menu_usuario" />
    </group>

    <item android:title="Comunicado">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/sobrenos_icone"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
